--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -20,6 +20,7 @@
 					<a href="area_login.html">LOGIN</a>
 					<a href="cadastro_cliente.html">CAD.CLIENTE</a>
 					<a href="cadastro_servico.html">CAD.SERVIÇO</a>
+					<a href="relatorio.php">RELATORIO</a>
 				</nav>
 			</header>
 		</div>
